Add sanity check